Stop sidebar content from scrolling on mobile

--- a/_sass/additional/_sticky_sidebar.scss
+++ b/_sass/additional/_sticky_sidebar.scss
@@ -7,15 +7,6 @@
     display: block;
     margin: 16px auto 0 auto;
   }
-  @include media-breakpoint-down(lg) {
-    position: relative;
-    position: -webkit-relative;
-    top: unset;
-    height: auto;
-    .sidebar-bottom-img {
-      display: none;
-    }
-  }
   .content {
     max-height: calc(100vh - 250px);
     overflow: scroll;
@@ -30,6 +21,18 @@
   }
   &.pad-top {
     padding-top: 64px;
+  }
+  @include media-breakpoint-down(lg) {
+    position: relative;
+    position: -webkit-relative;
+    top: unset;
+    height: auto;
+    .sidebar-bottom-img {
+      display: none;
+    }
+    .content {
+      max-height: unset
+    }
   }
 }
 
